file(GLOB KERNEL_SOURCES CONFIGURE_DEPENDS
    "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/*.cc"
)

file(GLOB KERNEL_SPEC_FILES CONFIGURE_DEPENDS
    "${CMAKE_CURRENT_SOURCE_DIR}/*_kernel_specs.inc"
)

set(GENERATED_WRAPPER_SOURCES)
set(GENERATED_REGISTRY_SOURCE "${CMAKE_CURRENT_BINARY_DIR}/BuiltinKernelRegistry.gen.cpp")
set(WRAPPED_IMPL_SOURCES)
set(REGISTRY_INCLUDE_BLOCKS "")
foreach(spec_file ${KERNEL_SPEC_FILES})
    get_filename_component(spec_name ${spec_file} NAME)
    get_filename_component(spec_stem ${spec_file} NAME_WE)
    string(REGEX REPLACE "_kernel_specs$" "" impl_base ${spec_stem})
    set(impl_source "${CMAKE_CURRENT_SOURCE_DIR}/${impl_base}_aarch64.cpp")
    if(NOT EXISTS ${impl_source})
        message(FATAL_ERROR "No implementation source found for spec ${spec_name}: expected ${impl_source}")
    endif()

    string(MAKE_C_IDENTIFIER "${impl_base}" spec_token_prefix)
    get_filename_component(impl_name ${impl_source} NAME)
    set(SPEC_INCLUDE "${spec_name}")
    set(IMPL_INCLUDE "${impl_name}")
    set(SPEC_TOKEN_PREFIX "${spec_token_prefix}")
    set(wrapper_source "${CMAKE_CURRENT_BINARY_DIR}/${spec_stem}_wrappers.gen.cpp")
    configure_file(
        "${CMAKE_CURRENT_SOURCE_DIR}/BuiltinKernelWrapper.cpp.in"
        "${wrapper_source}"
        @ONLY
    )
    list(APPEND GENERATED_WRAPPER_SOURCES "${wrapper_source}")
    list(APPEND WRAPPED_IMPL_SOURCES "${impl_source}")
    string(APPEND REGISTRY_INCLUDE_BLOCKS
        "#define ANNC_SPEC_TOKEN_PREFIX ${spec_token_prefix}\n"
        "#define ANNC_BUILTIN_KERNEL_SPECS_FILE \"${spec_name}\"\n"
        "#include \"Kernel/BuiltinKernelSpecRegister.h\"\n"
        "#undef ANNC_SPEC_TOKEN_PREFIX\n\n")
endforeach()

list(REMOVE_ITEM KERNEL_SOURCES ${WRAPPED_IMPL_SOURCES})

file(WRITE "${GENERATED_REGISTRY_SOURCE}" "// Auto-generated by CMake. Do not edit by hand.\nnamespace annc::kernels::detail { void ensureBuiltinKernelRegistryLinked() {} }\n\n${REGISTRY_INCLUDE_BLOCKS}")

add_library(ANNCBuiltinKernels STATIC ${KERNEL_SOURCES} ${GENERATED_WRAPPER_SOURCES})

target_include_directories(ANNCBuiltinKernels PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_BINARY_DIR}
)

target_link_libraries(ANNCBuiltinKernels PUBLIC
    ANNCKernel
)

target_sources(ANNCKernel PRIVATE "${GENERATED_REGISTRY_SOURCE}")
target_include_directories(ANNCKernel PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_BINARY_DIR}
)

install(TARGETS ANNCBuiltinKernels ARCHIVE DESTINATION lib)

foreach(src ${KERNEL_SOURCES})
    get_filename_component(kernel_name ${src} NAME_WE)
    message(STATUS "Builtin kernel: ${kernel_name}")
endforeach()
foreach(gen_src ${GENERATED_WRAPPER_SOURCES})
    get_filename_component(kernel_name ${gen_src} NAME_WE)
    message(STATUS "Builtin generated wrapper: ${kernel_name}")
endforeach()
get_filename_component(kernel_name ${GENERATED_REGISTRY_SOURCE} NAME_WE)
message(STATUS "Builtin generated registry: ${kernel_name}")
