file(GLOB_RECURSE KERNEL_SOURCES CONFIGURE_DEPENDS
    "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/*.cc"
)

file(GLOB_RECURSE KERNEL_SPEC_FILES CONFIGURE_DEPENDS
    "${CMAKE_CURRENT_SOURCE_DIR}/*_kernel_specs.inc"
)

if(NOT ANNC_ENABLE_KDNN_ADAPTOR)
    list(FILTER KERNEL_SOURCES EXCLUDE REGEX "kdnn_adaptor/")
    list(FILTER KERNEL_SPEC_FILES EXCLUDE REGEX "kdnn_adaptor/")
endif()
if(NOT ANNC_ENABLE_CONSTANT_FOLDING)
    list(FILTER KERNEL_SOURCES EXCLUDE REGEX "kdnn_adaptor/matmul_packed_")
    list(FILTER KERNEL_SPEC_FILES EXCLUDE REGEX "kdnn_adaptor/matmul_packed_kernel_specs\\.inc$")
endif()

set(GENERATED_WRAPPER_SOURCES)
set(GENERATED_REGISTRY_SOURCE "${CMAKE_CURRENT_BINARY_DIR}/BuiltinKernelRegistry.gen.cpp")
set(WRAPPED_IMPL_SOURCES)
set(REGISTRY_INCLUDE_BLOCKS "")
foreach(spec_file ${KERNEL_SPEC_FILES})
    file(RELATIVE_PATH spec_relpath "${CMAKE_CURRENT_SOURCE_DIR}" "${spec_file}")
    get_filename_component(spec_name ${spec_relpath} NAME)
    get_filename_component(spec_stem ${spec_relpath} NAME_WE)
    string(REGEX REPLACE "_kernel_specs$" "" impl_base ${spec_stem})
    get_filename_component(spec_rel_dir "${spec_relpath}" DIRECTORY)
    if(spec_rel_dir)
        set(impl_source "${CMAKE_CURRENT_SOURCE_DIR}/${spec_rel_dir}/${impl_base}_aarch64.cpp")
        set(SPEC_INCLUDE "${spec_rel_dir}/${spec_name}")
        set(IMPL_INCLUDE "${spec_rel_dir}/${impl_base}_aarch64.cpp")
    else()
        set(impl_source "${CMAKE_CURRENT_SOURCE_DIR}/${impl_base}_aarch64.cpp")
        set(SPEC_INCLUDE "${spec_name}")
        set(IMPL_INCLUDE "${impl_base}_aarch64.cpp")
    endif()
    if(NOT EXISTS ${impl_source})
        message(FATAL_ERROR "No implementation source found for spec ${spec_relpath}: expected ${impl_source}")
    endif()

    string(MAKE_C_IDENTIFIER "${spec_relpath}" spec_token_prefix)
    set(SPEC_TOKEN_PREFIX "${spec_token_prefix}")
    set(wrapper_source "${CMAKE_CURRENT_BINARY_DIR}/${spec_token_prefix}_wrappers.gen.cpp")
    configure_file(
        "${CMAKE_CURRENT_SOURCE_DIR}/BuiltinKernelWrapper.cpp.in"
        "${wrapper_source}"
        @ONLY
    )
    list(APPEND GENERATED_WRAPPER_SOURCES "${wrapper_source}")
    list(APPEND WRAPPED_IMPL_SOURCES "${impl_source}")
    string(APPEND REGISTRY_INCLUDE_BLOCKS
        "#define ANNC_SPEC_TOKEN_PREFIX ${spec_token_prefix}\n"
        "#define ANNC_BUILTIN_KERNEL_SPECS_FILE \"${SPEC_INCLUDE}\"\n"
        "#include \"Kernel/BuiltinKernelSpecRegister.h\"\n"
        "#undef ANNC_SPEC_TOKEN_PREFIX\n\n")
endforeach()

list(REMOVE_ITEM KERNEL_SOURCES ${WRAPPED_IMPL_SOURCES})

file(WRITE "${GENERATED_REGISTRY_SOURCE}" "// Auto-generated by CMake. Do not edit by hand.\nnamespace annc::kernels::detail { void ensureBuiltinKernelRegistryLinked() {} }\n\n${REGISTRY_INCLUDE_BLOCKS}")

add_library(ANNCBuiltinKernels STATIC ${KERNEL_SOURCES} ${GENERATED_WRAPPER_SOURCES})

target_include_directories(ANNCBuiltinKernels PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_BINARY_DIR}
)

if(ANNC_ENABLE_KDNN_ADAPTOR)
    if(TARGET KDNN::kdnn)
        target_link_libraries(ANNCBuiltinKernels PUBLIC KDNN::kdnn)
    elseif(KDNN_INCLUDE_DIR AND KDNN_LIBRARY)
        target_include_directories(ANNCBuiltinKernels PRIVATE
            "${KDNN_INCLUDE_DIR}"
        )
        target_link_libraries(ANNCBuiltinKernels PUBLIC
            "${KDNN_LIBRARY}"
        )
    else()
        message(FATAL_ERROR
            "ANNC_ENABLE_KDNN_ADAPTOR is ON, but neither KDNN::kdnn nor "
            "KDNN_INCLUDE_DIR/KDNN_LIBRARY is available")
    endif()
endif()

target_link_libraries(ANNCBuiltinKernels PUBLIC
    ANNCKernel
)

target_sources(ANNCKernel PRIVATE "${GENERATED_REGISTRY_SOURCE}")
target_include_directories(ANNCKernel PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_BINARY_DIR}
)

install(TARGETS ANNCBuiltinKernels ARCHIVE DESTINATION lib)

foreach(src ${KERNEL_SOURCES})
    get_filename_component(kernel_name ${src} NAME_WE)
    message(STATUS "Builtin kernel: ${kernel_name}")
endforeach()
foreach(gen_src ${GENERATED_WRAPPER_SOURCES})
    get_filename_component(kernel_name ${gen_src} NAME_WE)
    message(STATUS "Builtin generated wrapper: ${kernel_name}")
endforeach()
get_filename_component(kernel_name ${GENERATED_REGISTRY_SOURCE} NAME_WE)
message(STATUS "Builtin generated registry: ${kernel_name}")
